--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -284,6 +284,12 @@
   "no_trackers_detected": {
     "message": "Pas de trackers détectés"
   },
+  "number_of_trackers_with_blocked_network_requests_": {
+    "message": "Number of trackers with blocked network requests."
+  },
+  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
+    "message": "Number of trackers with removed cookies or fingerprints."
+  },
   "off": {
     "message": "désactivé"
   },
@@ -398,6 +404,9 @@
   "tired_of_cookie_popups_": {
     "message": "REFUSER LES COOKIES VOUS USE ?"
   },
+  "trackers_blocked": {
+    "message": "Trackers blocked"
+  },
   "trackers_count": {
     "message": "Trackers comptés"
   },
@@ -406,6 +415,9 @@
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Mouchards détectés par Ghostery sur ce site :&nbsp;$${0}"
+  },
+  "trackers_modified": {
+    "message": "Trackers modified"
   },
   "trackers_preview": {
     "message": "Aperçu mouchards"
@@ -416,6 +428,15 @@
   "unidentified": {
     "message": "Non identifié",
     "description": "Tracker category name"
+  },
+  "urls_blocked": {
+    "message": "URLs blocked"
+  },
+  "urls_modified": {
+    "message": "URLs modified"
+  },
+  "urls_observed": {
+    "message": "URLs observed"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
