--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -284,6 +284,12 @@
   "no_trackers_detected": {
     "message": "Nessun tracker rilevato"
   },
+  "number_of_trackers_with_blocked_network_requests_": {
+    "message": "Number of trackers with blocked network requests."
+  },
+  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
+    "message": "Number of trackers with removed cookies or fingerprints."
+  },
   "off": {
     "message": "Disattivato"
   },
@@ -398,6 +404,9 @@
   "tired_of_cookie_popups_": {
     "message": "STANCO DEI POPUP DEI COOKIE?"
   },
+  "trackers_blocked": {
+    "message": "Trackers blocked"
+  },
   "trackers_count": {
     "message": "Conteggio tracker"
   },
@@ -406,6 +415,9 @@
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Tracker rilevati da Ghostery su questo sito web:&nbsp;$${0}"
+  },
+  "trackers_modified": {
+    "message": "Trackers modified"
   },
   "trackers_preview": {
     "message": "Anteprima Tracker"
@@ -416,6 +428,15 @@
   "unidentified": {
     "message": "Non identificato",
     "description": "Tracker category name"
+  },
+  "urls_blocked": {
+    "message": "URLs blocked"
+  },
+  "urls_modified": {
+    "message": "URLs modified"
+  },
+  "urls_observed": {
+    "message": "URLs observed"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Abbiamo aggiornato i Termini e condizioni. Per continuare a usare il Ghostery Tracker & Ad Blocker durante la navigazione, rinnova la configurazione."
