--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -284,6 +284,12 @@
   "no_trackers_detected": {
     "message": "트래커 감지되지 않음"
   },
+  "number_of_trackers_with_blocked_network_requests_": {
+    "message": "Number of trackers with blocked network requests."
+  },
+  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
+    "message": "Number of trackers with removed cookies or fingerprints."
+  },
   "off": {
     "message": "끄기 "
   },
@@ -398,6 +404,9 @@
   "tired_of_cookie_popups_": {
     "message": "쿠키 팝업이 너무 많습니까?"
   },
+  "trackers_blocked": {
+    "message": "Trackers blocked"
+  },
   "trackers_count": {
     "message": "트래커 카운트"
   },
@@ -406,6 +415,9 @@
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "이 웹사이트에서 Ghostery가 탐지한 추적기:&nbsp;$${0}"
+  },
+  "trackers_modified": {
+    "message": "Trackers modified"
   },
   "trackers_preview": {
     "message": "트래커 미리보기"
@@ -416,6 +428,15 @@
   "unidentified": {
     "message": "알 수 없음",
     "description": "Tracker category name"
+  },
+  "urls_blocked": {
+    "message": "URLs blocked"
+  },
+  "urls_modified": {
+    "message": "URLs modified"
+  },
+  "urls_observed": {
+    "message": "URLs observed"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "이용 약관이 업데이트되었습니다. 브라우징 중 Ghostery 트래커 및 광고 차단기를 계속 사용하려면 셋업을 갱신해주세요."
