--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -159,6 +159,9 @@
   "for_more_information_read_our_full": {
     "message": "Aby uzyskać więcej informacji, przeczytaj "
   },
+  "further_protection": {
+    "message": "Further Protection"
+  },
   "ghostery__action_required": {
     "message": "Ghostery: wymagane działanie"
   },
@@ -425,6 +428,9 @@
   "trackers_wheel": {
     "message": "Wykres kołowy z trackerami"
   },
+  "tracking_prevention_on_search_engine_result_pages": {
+    "message": "Tracking Prevention on Search Engine Result Pages"
+  },
   "unidentified": {
     "message": "Niezidentyfikowane",
     "description": "Tracker category name"
@@ -458,6 +464,12 @@
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
     "message": "Jeśli spauzujesz Ghostery na indywidualnej stronie internetowej, ta strona pojawi się tutaj."
+  },
+  "while_using_a_non_private_search_engine_like_google__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google, Ghostery detects and displays trackers even before you visit a webpage."
+  },
+  "while_using_a_non_private_search_engine_like_google_or_bing__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google or Bing, Ghostery detects and displays trackers even before you visit a webpage."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
