--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "Habilitado"
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "Esencial",
     "description": "Tracker category name"
@@ -341,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "Leer más sobre WhoTracks.Me"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "Renueva GHOSTERY para tener protección total"
   },
@@ -403,6 +409,9 @@
   },
   "terms___conditions": {
     "message": "Términos y condiciones"
+  },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
   },
   "tired_of_cookie_popups_": {
     "message": "¿TE HAS CANSADO DE LAS VENTANAS SOBRE LAS COOKIES?"
