--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "有効になっています"
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "必需",
     "description": "Tracker category name"
@@ -341,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Meで詳細を見る"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "Ghosteryを更新して包括的な保護機能を利用する"
   },
@@ -403,6 +409,9 @@
   },
   "terms___conditions": {
     "message": "利用規約"
+  },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
   },
   "tired_of_cookie_popups_": {
     "message": "クッキーのポップアップにうんざりですか?"
