--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "활성화됨 "
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "필수 ",
     "description": "Tracker category name"
@@ -341,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "완벽한 보호를 위해 GHOSTERY를 갱신하세요"
   },
@@ -403,6 +409,9 @@
   },
   "terms___conditions": {
     "message": "사용 약관 "
+  },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
   },
   "tired_of_cookie_popups_": {
     "message": "쿠키 팝업이 너무 많습니까?"
