--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "已启用"
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "基本",
     "description": "Tracker category name"
@@ -341,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上了解详情"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "续订 GHOSTERY 以获得全面保护"
   },
@@ -403,6 +409,9 @@
   },
   "terms___conditions": {
     "message": "条款和条件"
+  },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
   },
   "tired_of_cookie_popups_": {
     "message": "厌烦了 Cookie 弹出窗口？"
